--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -36,8 +36,8 @@ body {
 }
 
 .btn {
-  color:white;
-  background:#cadde1;
+  color:white !important;
+  background:#55C35E ;
   border: 1px solid white;
 }
 
