sections set up for owner dashboard

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -22,5 +22,23 @@
             </div>
         </div>
         <h1>Job Postings</h2>
+        <div class="tabbable"> <!-- Only required for left/right tabs -->
+            <ul class="nav nav-tabs">
+                <li class="active">
+                    <a href="#tab1" data-toggle="tab">Current posts</a>
+                </li>
+                <li>
+                    <a href="#tab2" data-toggle="tab">Past posts</a>
+                </li>
+            </ul>
+            <div class="tab-content">
+                <div class="tab-pane active" id="tab1">
+                    <p>List of current posts</p>
+                </div>
+                <div class="tab-pane" id="tab2">
+                    <p>List of past posts</p>
+                </div>
+            </div>
+        </div>     
     </div>
 </div>
