--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,4 @@
-{{> nav/nav-block}}
+{{> nav-block}}
 
 <div id="main-container" class="container1">
     <div class="jumbotron text-center header-wrap" align="center">
