--- a/views/partials/nav-block.handlebars
+++ b/views/partials/nav-block.handlebars
@@ -11,11 +11,11 @@
         <a class="nav-link" href="/profile">Username here</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/logout">Logout</a>
+        <a class="nav-link" href="/logout" id="logout">Logout</a>
       </li>
     {{else}}
       <li class="nav-item">
-        <a class="nav-link" href="#" id="login-modal">Login</a>
+        <a class="nav-link" href="#" id="login">Login</a>
       </li>
     {{/if}}
   </ul>
