--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,4 @@
-{{> nav/nav-block}}
+{{> nav-block}}
 
 <div class="dashboard-container">
     <h1 id="your-dashboard" class="text-center">Your Dashboard</h1>
@@ -14,7 +14,7 @@
                     <p class="card-text">About the pet text.</p>
                 </div>
             </div> --}}
-            {{> pets/pets-card }}
+            {{> pets-card }}
 
             <form class="card" style="width: 18rem;">
                 <div class="card-body">
@@ -36,24 +36,30 @@
         </div>  
     </div>
     <div id="jobs-container" class="d-flex flex-column mx-auto" style="width: 92%;">
-        <h1>Job Postings</h2>
+        <div class="d-flex flex-row justify-content-between mt-5">
+            <h1>Job Postings</h2>
+        </div>
         <div class="tabbable">
             <ul class="nav nav-tabs">
-                <li class="active">
+                <li class="active nav-item">
                     <a href="#tab1" data-toggle="tab">Current posts</a>
                 </li>
-                <li>
+                <li class="nav-item">
                     <a href="#tab2" data-toggle="tab">Past posts</a>
                 </li>
             </ul>
             <div class="tab-content">
                 <div class="tab-pane active" id="tab1">
                     <p>List of current posts</p>
+                    {{> jobs-card }}
                 </div>
                 <div class="tab-pane" id="tab2">
                     <p>List of past posts</p>
+                    {{> jobs-card }}
                 </div>
             </div>
         </div>  
     </div>     
 </div>
+
+{{> modal/create-job }}
