--- a/views/partials/pets-card.handlebars
+++ b/views/partials/pets-card.handlebars
@@ -4,7 +4,6 @@
 {{pet.type}}
 {{pet.about}}
  --}}
-
 {{#each this}}
 <div class="card" style="width: 18rem;">
     <div class="card-body">
@@ -12,5 +11,6 @@
         <h6 class="card-subtitle mb-2 text-muted">pettype</h6>
         <p class="card-text">aboutpet</p>
     </div>
+    <button class="btn btn-lg btn-success" type="button" data-toggle="modal" data-target="#exampleModal">New job</button>
 </div>
 {{/each}}
