created walker dashboard

--- a/views/jobsearch.handlebars
+++ b/views/jobsearch.handlebars
@@ -6,16 +6,16 @@
                 <div class="col-auto">
                     <i class="fas fa-search h4 text-body"></i>
                 </div>
-                <div class="col">
+                {{!-- <div class="col">
                     <input class="form-control form-control-lg form-control-borderless" type="search" placeholder="Enter a zip code to find jobs in your area">
-                </div>
+                </div> --}}
                 <div class="col-auto">
                     <button class="btn btn-lg btn-success" type="submit">Search</button>
                 </div>
             </div>
         </form>
         <div class="mt-5">
-            {{> jobs-card }}
+            {{!-- {{> jobs-card }} --}}
         </div>
     </div>
 </div>
