--- a/views/partials/modal/create-job.handlebars
+++ b/views/partials/modal/create-job.handlebars
@@ -16,6 +16,9 @@
             <input type="text" id="time" class="form-control" placeholder="time"/>
             <label class="form-label" for="time"></label>
 
+            <input type="text" id="location" class="form-control" placeholder="Enter your address"/>
+            <label class="form-label" for="location"></label>
+
             <select class="form-select form-control" aria-label="Default select example">
               <option selected>Walk</option>
               <option value="1">Check-in</option>
