worked on main by accident

--- a/views/partials/modal/create-job.handlebars
+++ b/views/partials/modal/create-job.handlebars
@@ -15,6 +15,20 @@
 
             <input type="text" id="time" class="form-control" placeholder="time"/>
             <label class="form-label" for="time"></label>
+{{!-- <div class="container">
+   <div class="row">
+      <div class='col-sm-6'>
+         <div class="form-group">
+            <div class='input-group date' id='datetimepicker1'>
+               <input type='text' class="form-control" />
+               <span class="input-group-addon">
+               <span class="glyphicon glyphicon-calendar"></span>
+               </span>
+            </div>
+         </div>
+      </div>
+   </div>
+</div> --}}
 
             <input type="text" id="location" class="form-control" placeholder="Enter your address"/>
             <label class="form-label" for="location"></label>
