--- a/views/partials/nav-block.handlebars
+++ b/views/partials/nav-block.handlebars
@@ -6,7 +6,7 @@
   
   <!-- Links -->
   <ul class="nav navbar-nav ml-auto">
-    {{#if isloggedin}}
+    {{#if loggedIn}}
       <li class="nav-item">
         <a class="nav-link" href="/profile">Username here</a>
       </li>
