--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -51,11 +51,11 @@
             <div class="tab-content">
                 <div class="tab-pane active" id="tab1">
                     <p>List of current posts</p>
-                    {{> jobs-card }}
+                    {{> jobs-card jobs}}
                 </div>
                 <div class="tab-pane" id="tab2">
-                    <p>List of past posts</p>
-                    {{> jobs-card }}
+                    <p>List of past jobs</p>
+                    {{> jobs-card jobs}}
                 </div>
             </div>
         </div>  
