--- a/views/partials/jobs-card.handlebars
+++ b/views/partials/jobs-card.handlebars
@@ -1,4 +1,4 @@
-{{#each this}}
+{{!-- {{#each this}}
 <div class="card mb-2">
     <div class="card-body">
         <h4 class="card-title">Owner Name</h5>
@@ -8,16 +8,18 @@
         <h6 class="card-text text-muted">Location: 1234 Big Dog Ct, Raleigh, NC, 27103</h6>
     </div>
 </div>
-{{/each}}
+{{/each}} --}}
 
-{{!-- {{#each job}}
+<div class="jobs">
+{{#each this}}
 <div class="card mb-2">
     <div class="card-body">
-        <h4 class="card-title">{{ owner.first_name }}</h5>
+        <h4 class="card-title">{{ owner.first_name }} {{ owner.last_name }}</h5>
         <h5 class="card-subtitle mb-2 text-muted">Visit: {{ job.type }}</h6>
         <h5 class="card-text">Pay: {{ job.pay }}</h5>
         <h6 class="card-text text-muted">Time: {{ job.timeframe }}</h6>
         <h6 class="card-text text-muted">Location: {{ job.location }}</h6>
     </div>
 </div>
-{{/each}} --}}
+{{/each}}
+</div>
