--- a/views/partials/jobs-card.handlebars
+++ b/views/partials/jobs-card.handlebars
@@ -15,10 +15,10 @@
 <div class="card mb-2">
     <div class="card-body">
         <h4 class="card-title">{{ owner.first_name }} {{ owner.last_name }}</h5>
-        <h5 class="card-subtitle mb-2 text-muted">Visit: {{ job.type }}</h6>
-        <h5 class="card-text">Pay: {{ job.pay }}</h5>
-        <h6 class="card-text text-muted">Time: {{ job.timeframe }}</h6>
-        <h6 class="card-text text-muted">Location: {{ job.location }}</h6>
+        <h5 class="card-subtitle mb-2 text-muted">Visit: {{#if walk }}Walk{{/if}}{{#if check_in }}Check-In{{/if}}</h6>
+        <h5 class="card-text">Pay: {{ this.pay }}</h5>
+        <h6 class="card-text text-muted">Time: {{ this.timeframe }}</h6>
+        <h6 class="card-text text-muted">Location: {{ this.location }}</h6>
     </div>
 </div>
 {{/each}}
