--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -5,16 +5,9 @@
     
     <div id="pets-container" class="d-flex flex-column mx-auto" style="width: 92%;">
         <h1>Your Pets</h1>
-        <div id="pet-cards" class="d-flex flex-row justify-content-between">
-            {{!-- Example Card --}}
-            {{!-- <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Pet name</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Pet Type</h6>
-                    <p class="card-text">About the pet text.</p>
-                </div>
-            </div> --}}
-            {{> pets-card }}
+        <div id="pet-cards" class="d-flex flex-row">
+
+            {{> pets-card pets}}
 
             <form class="card" style="width: 18rem;">
                 <div class="card-body">
@@ -50,12 +43,12 @@
             </ul>
             <div class="tab-content">
                 <div class="tab-pane active" id="tab1">
-                    <p>List of current posts</p>
+                    <p>List of current jobs</p>
                     {{> jobs-card jobs}}
                 </div>
                 <div class="tab-pane" id="tab2">
                     <p>List of past jobs</p>
-                    {{> jobs-card jobs}}
+                    {{> jobs-card jobsCompleted }}
                 </div>
             </div>
         </div>  
