--- a/views/jobsearch.handlebars
+++ b/views/jobsearch.handlebars
@@ -15,7 +15,7 @@
             </div>
         </form>
         <div class="mt-5">
-            {{> jobs-card }}
+            {{> jobs-card jobs}}
         </div>
     </div>
 </div>
