--- a/views/walker-dashboard.handlebars
+++ b/views/walker-dashboard.handlebars
@@ -15,13 +15,15 @@
             <div class="tab-content">
                 <div class="tab-pane active" id="tab1">
                     <p>List of current posts</p>
-                    {{> jobs-card }}
+                    {{> jobs-card jobs}}
                 </div>
                 <div class="tab-pane" id="tab2">
-                    <p>List of past posts</p>
-                    {{> jobs-card }}
+                    <p>List of past jobs</p>
+                    {{> jobs-card walkerJobsCompleted }}
                 </div>
             </div>
         </div>  
     </div>     
 </div>
+
+<script src="/javascript/walker-dashboard.js"></script>
