--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -7,7 +7,7 @@
         <h1>Your Pets</h1>
         <div id="pet-cards" class="d-flex flex-row">
 
-            {{> pets-card pets}}
+            {{> pets-card ownersPets}}
 
             <form class="card" style="width: 18rem;">
                 <div class="card-body">
@@ -23,22 +23,23 @@
                     <textarea id="about-pet-input" class="card-subtitle mb-2 text-muted form-outline" name="about-pet" placeholder="About your pet"></textarea>
                 </div>
                 <div>
-                    <button class="float-right mr-3 mb-3" type="submit">Confirm</button>
+                    <button class="float-right mr-3 mb-3 btn success" type="submit">Confirm</button>
                 </div>
             </form>
         </div>  
     </div>
+    
     <div id="jobs-container" class="d-flex flex-column mx-auto" style="width: 92%;">
-        <div class="d-flex flex-row justify-content-between mt-5">
+        <div class="d-flex flex-row justify-content-between mt-2">
             <h1>Job Postings</h2>
         </div>
         <div class="tabbable">
             <ul class="nav nav-tabs">
                 <li class="active nav-item">
-                    <a href="#tab1" data-toggle="tab">Current posts</a>
+                    <a class="nav-link active job-tab" href="#tab1" data-toggle="tab">Current posts</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#tab2" data-toggle="tab">Past posts</a>
+                    <a class="nav-link job-tab" href="#tab2" data-toggle="tab">Past posts</a>
                 </li>
             </ul>
             <div class="tab-content">
