owner can create post and pet with hardcoded data

--- a/views/partials/modal/create-job.handlebars
+++ b/views/partials/modal/create-job.handlebars
@@ -2,33 +2,19 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Create Job</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        <form action="">
+        <form class="create-job-form" action="">
           <div class="form-outline">
             <input type="text" id="price" class="form-control" placeholder="price"/>
             <label class="form-label" for="price"></label>
 
             <input type="text" id="time" class="form-control" placeholder="time"/>
             <label class="form-label" for="time"></label>
-{{!-- <div class="container">
-   <div class="row">
-      <div class='col-sm-6'>
-         <div class="form-group">
-            <div class='input-group date' id='datetimepicker1'>
-               <input type='text' class="form-control" />
-               <span class="input-group-addon">
-               <span class="glyphicon glyphicon-calendar"></span>
-               </span>
-            </div>
-         </div>
-      </div>
-   </div>
-</div> --}}
 
             <input type="text" id="location" class="form-control" placeholder="Enter your address"/>
             <label class="form-label" for="location"></label>
@@ -39,12 +25,15 @@
             </select>
             
           </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary">Save changes</button>
+          </div>
         </form>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
+
     </div>
   </div>
 </div>
+
+<script src="/javascript/create-job.js"></script>
