--- a/views/partials/modal/create-job.handlebars
+++ b/views/partials/modal/create-job.handlebars
@@ -10,20 +10,23 @@
       <div class="modal-body">
         <form class="create-job-form" action="">
           <div class="form-outline">
-            <input type="text" id="price" class="form-control" placeholder="price"/>
+            <input type="text" id="price" name="pay" class="form-control" placeholder="price"/>
             <label class="form-label" for="price"></label>
 
-            <input type="text" id="time" class="form-control" placeholder="time"/>
-            <label class="form-label" for="time"></label>
+            <input class="form-control" type="date" id="date-start" name="visit-date" value="" min="2022-01-01" max="2025-12-31">
+            <label class="form-label" for="date-start"></label>
 
-            <input type="text" id="location" class="form-control" placeholder="Enter your address"/>
+            <input class="form-control" type="time" id="hour-start" name="visit-time" >
+            <label class="form-label" for="hour-start"></label>
+
+            <input type="text" id="location" name="location" class="form-control" placeholder="Enter your zip code"/>
             <label class="form-label" for="location"></label>
 
-            <select class="form-select form-control" aria-label="Default select example">
-              <option selected>Walk</option>
-              <option value="1">Check-in</option>
+            <select id="visit-type" name="visit-select" class="form-select form-control" aria-label="Default select example">
+              <option name="walk" value="walk" selected>Walk</option>
+              <option name="checkin" value="checkin">Check-in</option>
             </select>
-            
+
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
