--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,6 +32,7 @@
 <body>
 	{{{ body }}}
   <script src="/assets/js/app.js"></script>
+  <script src="/javascript/create-account"></script>
 </body>
 
 </html>
