--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -43,7 +43,7 @@
                     <a class="nav-link active job-tab" href="#tab1" data-toggle="tab">Current posts</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link job-tab" href="#tab2" data-toggle="tab">Past posts</a>
+                    <a class="nav-link job-tab past-jobs-tab" href="#tab2" data-toggle="tab">Past posts</a>
                 </li>
             </ul>
 
@@ -63,5 +63,7 @@
 </div>
 
 <script src="/javascript/create-pet.js"></script>
+<script src="/javascript/create-job.js"></script>
+
 
 {{> modal/create-job }}
