--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="/stylesheets/style.css" type="text/css"/>
   	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.1/moment.js"></script>
 	<script src="https://code.jquery.com/jquery.js"></script>
+	{{!-- <script src ="javascript/create-account.js"></script> --}}
   	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 	
@@ -32,7 +33,7 @@
 <body>
 	{{{ body }}}
   <script src="/assets/js/app.js"></script>
-  <script src="/javascript/create-account"></script>
+ 
 </body>
 
 </html>
