log in and out, create pets with session.User_id

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -64,6 +64,8 @@
 
 <script src="/javascript/create-pet.js"></script>
 <script src="/javascript/create-job.js"></script>
+<script src="/javascript/logout.js"></script>
+
 
 
 {{> modal/create-job }}
