--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -14,13 +14,8 @@
                                 <div class="card-body p-4">
 
                                      <form class="create-account-form" action="">
+                                         
                                         <div class="form-outline">
-
-                                             <div class="form-outline">
-                                            <input type="id" name="id"id="id" class="form-control" placeholder="id"/>
-                                            <label class="form-label" for="id"></label>
-                                        </div>
-
                                             <input type="text" name="first" id="fist-name" class="form-control" placeholder="First Name"/>
                                             <label class="form-label" for="fist-name"></label>
                                         </div>
@@ -66,5 +61,7 @@
 </form>
 <script src ="javascript/create-account.js"></script>
 <script src ="javascript/create-owner.js"></script>
+<script src="/javascript/login.js"></script>
+
 
 {{!-- {{> modal/login-block}} --}}
