--- a/views/partials/jobs-card.handlebars
+++ b/views/partials/jobs-card.handlebars
@@ -13,13 +13,14 @@
         <button id="delete-job" class="float-right btn success" type="button">Delete</button>
         {{/unless}}
         {{/if}} --}}
-        {{#if owner}}
+        {{#if walker}}
         <button id="accept-job" class="float-right btn success" type="button">Accept</button>
         {{/if}}
     </div>
 </div>
 {{/each}}
 </div>
+
 
 
 
