--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,23 +15,12 @@
 	<script src="https://code.jquery.com/jquery.js"></script>
   	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-	
-  {{!-- <link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
-  <link rel="stylesheet" href="/resources/demos/style.css">
-  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-  <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
-  <script>
-  $( function() {
-    $( "#datetimepicker1" ).datepicker();
-  } );
-  </script> --}}
-
 	<title>Scout</title>
 </head>
 
 <body>
 	{{{ body }}}
-  <script src="/assets/js/app.js"></script>
+  {{!-- <script src="/assets/js/app.js"></script> --}}
 </body>
 
 </html>
