--- a/views/jobsearch.handlebars
+++ b/views/jobsearch.handlebars
@@ -6,7 +6,7 @@
         </div> --}}
         <h1 id="jobs-in-area">Showing jobs in your area</h1>
         <div class="mt-2">
-            {{> jobs-card {jobs} }}
+            {{> jobs-card jobs }}
         </div>
     </div>
 </div>
