--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,7 +2,7 @@
 
 <div class="dashboard-container">
     <h1 id="your-dashboard" class="text-center">Your Dashboard</h1>
-    
+    {{#if isOwner}}
     <div id="pets-container" class="d-flex flex-column mx-auto" style="width: 92%;">
         <h1>Your Pets</h1>
         <div id="pet-cards" class="d-flex flex-row">
@@ -29,6 +29,7 @@
 
         </div>  
     </div>
+    {{/if}}
     
     <div id="jobs-container" class="d-flex flex-column mx-auto" style="width: 92%;">
 
