--- a/views/partials/nav-block.handlebars
+++ b/views/partials/nav-block.handlebars
@@ -9,8 +9,8 @@
         <div class="dropdown">
           <button class="btn success dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-            <button class="dropdown-item" type="button">Job Search</button>
-            <button class="dropdown-item" type="button">Dashboard</button>
+            <a href="/jobs" class="dropdown-item" type="button">Job Search</a>
+            <a href="/dashboard" class="dropdown-item" type="button">Dashboard</a>
           </div>
         </div>
       </li>
