accepting jobs now inputs walker ID in to the job

--- a/views/jobsearch.handlebars
+++ b/views/jobsearch.handlebars
@@ -6,7 +6,8 @@
         </div> --}}
         <h1 id="jobs-in-area">Showing jobs in your area</h1>
         <div class="mt-2">
-            {{> job-search-job-card jobs=jobs isWalker=isWalker }}
+            {{> job-search-job-card jobs isWalker=isWalker }}
         </div>
     </div>
 </div>
+<script src="/javascript/accept-job.js"></script>
