--- a/views/partials/job-search-job-card.handlebars
+++ b/views/partials/job-search-job-card.handlebars
@@ -1,5 +1,6 @@
 <div class="jobs">
 {{#each this}}
+{{#if this.id}}
 <div class="card mb-2">
     <div class="card-body">
         <h4 class="card-title">{{ owner.first_name }} {{ owner.last_name }}</h5>
@@ -16,6 +17,7 @@
         {{#if ../isWalker}}
 <button id="accept-job" data-id="{{this.id}}" class="accept-job-class float-right btn success" type="button">Accept</button>
         {{/if}}
+    {{/if}}
     </div>
 </div>
 {{/each}}
