walkers dahsboard now shows jobs they have accepted

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -29,7 +29,6 @@
 
         </div>  
     </div>
-    {{/if}}
     
     <div id="jobs-container" class="d-flex flex-column mx-auto" style="width: 92%;">
 
@@ -50,17 +49,47 @@
 
             <div class="tab-content">
                 <div class="tab-pane active" id="tab1">
-                    <p>List of current jobs</p>
+                    <p></p>
                     {{> jobs-card jobs}}
                 </div>
                 <div class="tab-pane" id="tab2">
-                    <p>List of past jobs</p>
+                    <p></p>
                     {{> jobs-card completedJobs }}
                 </div>
             </div>
 
         </div>  
-    </div>     
+    </div>  
+    {{/if}}  
+
+    {{#if isWalker}}
+    <div id="jobs-container" class="d-flex flex-column mx-auto" style="width: 92%;">
+
+        <div class="tabbable">
+            
+            <ul class="nav nav-tabs">
+                <li class="active nav-item">
+                    <a class="nav-link active job-tab current-jobs-tab" href="#tab1" data-toggle="tab">Current jobs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link job-tab past-jobs-tab" href="#tab2" data-toggle="tab">Past jobs</a>
+                </li>
+            </ul>
+
+            <div class="tab-content">
+                <div class="tab-pane active" id="tab1">
+                    <p></p>
+                    {{> jobs-card jobs}}
+                </div>
+                <div class="tab-pane" id="tab2">
+                    <p></p>
+                    {{> jobs-card completedJobs }}
+                </div>
+            </div>
+
+        </div>  
+    </div>   
+    {{/if}}
 </div>
 
 <script src="/javascript/create-pet.js"></script>
@@ -70,3 +99,16 @@
 
 
 {{> modal/create-job }}
+
+    {{!-- <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+        <li class="nav-item" role="presentation">
+            <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Current jobs</button>
+        </li>
+        <li class="nav-item" role="presentation">
+            <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Past jobs</button>
+        </li>
+    </ul>
+    <div class="tab-content" id="pills-tabContent">
+        <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">...</div>
+        <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">...</div>
+    </div> --}}
