--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -50,7 +50,7 @@
             <div class="tab-content">
                 <div class="tab-pane active" id="tab1">
                     <p></p>
-                    {{> jobs-card jobs}}
+                    {{> jobs-card jobs isOwner=isOwner}}
                 </div>
                 <div class="tab-pane" id="tab2">
                     <p></p>
