--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -41,6 +41,14 @@ body {
   border: 1px solid white;
 }
 
+#job{
+  padding-left: 10px;
+  margin-left: 5px;
+}
+
+#unlogged-accept-job{
+  float: right;
+}
 #user-form, .header-wrap, #create-form, .create-user-wrap {
   padding: 20px;
   border-radius: 15px;
