--- a/views/jobsearch.handlebars
+++ b/views/jobsearch.handlebars
@@ -6,7 +6,7 @@
         </div> --}}
         <h1 id="jobs-in-area">Showing jobs in your area</h1>
         <div class="mt-2">
-            {{> job-search-job-card jobs isWalker=isWalker }}
+           {{> job-search-job-card jobs isWalker=isWalker loggedIn=loggedIn}}
         </div>
     </div>
 </div>
