--- a/views/partials/job-search-job-card.handlebars
+++ b/views/partials/job-search-job-card.handlebars
@@ -14,10 +14,35 @@
         <button id="delete-job" class="float-right btn success" type="button">Delete</button>
         {{/unless}}
         {{/if}} --}}
-        {{#if ../isWalker}}
-<button id="accept-job" data-id="{{this.id}}" class="accept-job-class float-right btn success" type="button">Accept</button>
+       {{#if ../isWalker}}
+        <button id="accept-job" data-id="{{this.id}}" class="accept-job-class float-right btn success" type="button">Accept</button>
         {{/if}}
+        {{#unless loggedIn}}
+        {{!-- <button id="unlogged-accept-job" data-id="{{this.id}}" class="accept-job-class float-right btn success" type="button">Accept</button> --}}
+        <!-- Button trigger modal -->
+<button id="unlogged-accept-job" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  Accept Job
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Only registered members can apply for jobs</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+    
+      <div class="modal-footer">
+        <button type="button" a href="/" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <a href="/" class="btn btn-primary" type="button">Register</a>
+      </div>
     </div>
+  </div>
+</div>
+        {{/unless}}
 </div>
 {{/if}}
 {{/each}}
