--- a/views/partials/job-search-job-card.handlebars
+++ b/views/partials/job-search-job-card.handlebars
@@ -18,9 +18,8 @@
         <button id="accept-job" data-id="{{this.id}}" class="accept-job-class float-right btn success" type="button">Accept</button>
         {{/if}}
         {{#unless loggedIn}}
-        {{!-- <button id="unlogged-accept-job" data-id="{{this.id}}" class="accept-job-class float-right btn success" type="button">Accept</button> --}}
-        <!-- Button trigger modal -->
-<button id="unlogged-accept-job" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+      
+<button class="accept-job-class float-right btn success id="unlogged-accept-job" type="button" data-id="{{this.id}}"dataclass="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
   Accept Job
 </button>
 
