walkers can complete jobs on their dashboard

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -95,6 +95,7 @@
 <script src="/javascript/create-pet.js"></script>
 <script src="/javascript/create-job.js"></script>
 <script src="/javascript/logout.js"></script>
+<script src="/javascript/complete-job.js"></script>
 
 
 
