completed jobs show on walker dashboard

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -72,7 +72,7 @@
                     <a class="nav-link active job-tab current-jobs-tab" href="#tab1" data-toggle="tab">Current jobs</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link job-tab past-jobs-tab" href="#tab2" data-toggle="tab">Past jobs</a>
+                    <a class="nav-link job-tab past-jobs-tab" href="#tab2" data-toggle="tab">Completed jobs</a>
                 </li>
             </ul>
 
