--- a/views/partials/nav-block.handlebars
+++ b/views/partials/nav-block.handlebars
@@ -18,6 +18,9 @@
         <a class="btn success" id="logout">Logout</a>
       </li>
     {{else}}
+      <li id="job" class="nav-item">
+           <a href="/jobs" id="job"class="btn success" type="button">Job Search</a>
+      </li>
       <li class="nav-item">
         <a class="btn success" type="button" data-toggle="modal" data-target="#user-info" id="loginNav">Login</a>
       </li>
