--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -49,11 +49,9 @@
 
             <div class="tab-content">
                 <div class="tab-pane active" id="tab1">
-                    <p></p>
                     {{> jobs-card jobs isOwner=isOwner}}
                 </div>
                 <div class="tab-pane" id="tab2">
-                    <p></p>
                     {{> jobs-card completedJobs }}
                 </div>
             </div>
@@ -96,20 +94,6 @@
 <script src="/javascript/create-job.js"></script>
 <script src="/javascript/logout.js"></script>
 <script src="/javascript/complete-job.js"></script>
-
-
+<script src="/javascript/delete-job.js"></script>
 
 {{> modal/create-job }}
-
-    {{!-- <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-        <li class="nav-item" role="presentation">
-            <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="true">Current jobs</button>
-        </li>
-        <li class="nav-item" role="presentation">
-            <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Past jobs</button>
-        </li>
-    </ul>
-    <div class="tab-content" id="pills-tabContent">
-        <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">...</div>
-        <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">...</div>
-    </div> --}}
